[ACPI] fix !CONFIG_PCI build   use X86 ACPI specific version of eisa_set_level_irq()   http://bugzilla.kernel.org/show_bug.cgi?id=1390